# fastapi_beanie

./: .gitignore  config.py  database.py  main.py  pyproject.toml
_httpreq/: product_reviews.http
models/: product_review.py
routes/: product_review.py
services/product_review/: product_review_crud.py  product_review_schema.py
