[tool.poetry]
name = "fastapi-beanie"
version = "0.1.0"
description = ""
authors = ["uluk001"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
beanie = "^1.24.0"
uvicorn = "^0.26.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
